--- a/templates/tab.html
+++ b/templates/tab.html
@@ -3,9 +3,7 @@
     <table>
         <caption>Cliquer sur une colonne pour jouer </caption>
         <tbody>
-            <!-- 6 lignes x 7 colonnes -->
-            <!-- data-row (0 en haut -> 5 en bas), data-col (0 -> 6) -->
-            <!-- ligne 0 -->
+            <!-- data-row: ligne(0-5 = 6), data-col: colonne(0-6 = 7) -->
             <tr>
             <td data-row="0" data-col="0"><span class="slot"></span></td>
             <td data-row="0" data-col="1"><span class="slot"></span></td>
@@ -15,7 +13,6 @@
             <td data-row="0" data-col="5"><span class="slot"></span></td>
             <td data-row="0" data-col="6"><span class="slot"></span></td>
             </tr>
-            <!-- ligne 1 -->
             <tr>
             <td data-row="1" data-col="0"><span class="slot"></span></td>
             <td data-row="1" data-col="1"><span class="slot"></span></td>
@@ -25,7 +22,6 @@
             <td data-row="1" data-col="5"><span class="slot"></span></td>
             <td data-row="1" data-col="6"><span class="slot"></span></td>
             </tr>
-            <!-- ligne 2 -->
             <tr>
             <td data-row="2" data-col="0"><span class="slot"></span></td>
             <td data-row="2" data-col="1"><span class="slot"></span></td>
@@ -35,7 +31,6 @@
             <td data-row="2" data-col="5"><span class="slot"></span></td>
             <td data-row="2" data-col="6"><span class="slot"></span></td>
             </tr>
-            <!-- ligne 3 -->
             <tr>
             <td data-row="3" data-col="0"><span class="slot"></span></td>
             <td data-row="3" data-col="1"><span class="slot"></span></td>
@@ -45,7 +40,6 @@
             <td data-row="3" data-col="5"><span class="slot"></span></td>
             <td data-row="3" data-col="6"><span class="slot"></span></td>
             </tr>
-            <!-- ligne 4 -->
             <tr>
             <td data-row="4" data-col="0"><span class="slot"></span></td>
             <td data-row="4" data-col="1"><span class="slot"></span></td>
@@ -55,7 +49,6 @@
             <td data-row="4" data-col="5"><span class="slot"></span></td>
             <td data-row="4" data-col="6"><span class="slot"></span></td>
             </tr>
-            <!-- ligne 5 (bas) -->
             <tr>
             <td data-row="5" data-col="0"><span class="slot"></span></td>
             <td data-row="5" data-col="1"><span class="slot"></span></td>
