--- a/templates/tab.html
+++ b/templates/tab.html
@@ -1,4 +1,4 @@
-{{ define tab }}
+{{ define "tab" }}
 <div class="tab4">
     <table>
         <caption>Cliquer sur une colonne pour jouer </caption>
@@ -61,3 +61,4 @@
         </tbody>
     </table>
 </div>
+{{end}}
