modified play and tab

--- a/templates/tab.html
+++ b/templates/tab.html
@@ -1,7 +1,7 @@
 {{ define "tab" }}
 <div class="tab4">
     <table>
-        <caption>Cliquer sur une colonne pour jouer </caption>
+        <caption>Click on a column to begin the battle </caption>
         <tbody>
             <!-- data-row: ligne(0-5 = 6), data-col: colonne(0-6 = 7) -->
             <tr>
