--- a/templates/start.html
+++ b/templates/start.html
@@ -1,5 +1,5 @@
 {{ define "start" }}
-<h1>🔥 Bienvenue sur Puissance 4 🔥</h1>
+<h1>🔥 Bienvenue sur Power4 Web 🔥</h1>
 <form action="/start" method="POST">
   <label>Joueur 1 :</label>
   <input type="text" name="p1" placeholder="Nom du joueur 1" required /><br>
