--- a/templates/tab.html
+++ b/templates/tab.html
@@ -8,7 +8,7 @@
     <td>
       <form action="/play" method="POST">
         <input type="hidden" name="col" value="{{.}}">
-        <button type="submit">▼</button>
+        <button type="submit" name="choose">▼</button>
       </form>
     </td>
     {{end}}
